# wordle-solver

./: .gitignore  Cargo.toml
engine_server/: Cargo.toml
engine_server/src/: main.rs
engine_server/src/handlers/: handler.rs
engine_server/src/logic/: game.rs  mod.rs  models.rs
shared/src/: lib.rs
