[package]
name = "engine_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
shared = { path = "../shared"}
tokio = { version = "1.53.0", features = ["full"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
rand = "0.8"
serde = { version = "1.0.144", features = ["derive"] }

